# ggen

./: .gitignore  .todo  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.markdown  README.md  TODO  Vagrantfile  autogen.sh  configure.ac  doxygen.cfg  ggen.pc.in  version.sh
doc/: Bibliography.dox  CMakeLists.txt  Doxyfile.in  Mainpage.dox  Makefile.am  ggen.1md  ggen.3md
docs/: Doxyfile  README
docs/bibliography/test_bench_for_scheduling/: abstract.tex
examples/: commandline.sh
lib/: Makefile.am  dynamic_properties.cpp  dynamic_properties.hpp  graph-analysis.cpp  graph-transformation.cpp  types.hpp
src/: CMakeLists.txt  DESIGN_CHOICES.txt  FindGSL.cmake  Makefile  Makefile.am  analysis.cpp  bipartite-matching.c  bipartite-matching.h  boost_test.cpp  builtin-add-property.c  builtin-add-property.cpp  builtin-analyse-graph.c  builtin-analyse-graph.cpp  builtin-analyse-property.c  builtin-dataflow-graph.c  builtin-extract-property.c  builtin-extract-property.cpp  builtin-generate-graph.c  builtin-generate-graph.cpp  builtin-static-graph.c  builtin-transform-graph.c  builtin-transform-graph.cpp  builtin.h  builtin.hpp  debug.cpp  debug.hpp  dynamic_properties.cpp  dynamic_properties.hpp  error.c  error.h  ggen-tool.c  ggen.cpp  ggen.h  ggen.hpp  graph-analysis.c  graph-analysis.cpp  graph-analysis.hpp  graph-dataflow.c  graph-generation.c  graph-generation.cpp  (+31 more)
src/prototypes/: boost_test.cpp  matrix_gradiant.cpp  spirit_test.cpp
src/scripts/: CMakeLists.txt  config.pl  degree_stats.R  pysched.py  validation_campaign.pl
src/tests/: CMakeLists.txt  generation_test.cpp  lib_results.cpp
tests/: Makefile.am  check_dot.sh  dot_io.c  erdos_gnm.c  erdos_gnp.c  erdos_lbl.c  errors.c  fifo.c  lib-transform.c  lib_results.cpp  longest_path.c  random_orders.c  transform_add.c  transform_delete.c
www/: Makefile  bibtex.markdown  copytoweb.sh  index.markdown  index.php  publi.bib  style.css  template.html
