lib_LTLIBRARIES = libggen.la
libggen_la_SOURCES = dynamic_properties.cpp dynamic_properties.hpp\
		     graph-generation.cpp graph-generation.hpp\
		     graph-analysis.cpp graph-analysis.hpp\
		     random.cpp random.hpp\
		     graph-transformation.cpp graph-transformation.hpp\
		     graph-properties.cpp graph-properties.hpp\
		     results.cpp results.hpp\
		     types.hpp
